--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@xstate/react": "^3.0.1",
     "axios": "^1.2.2",
+    "babel-preset-stage-0": "^6.24.1",
+    "enzyme": "^3.11.0",
     "mock-file-server": "^0.1.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -47,6 +48,15 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.0"
+    "@types/jest": "^29.2.5",
+    "@types/uuid": "^9.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^29.3.1"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    }
   }
 }
